# lingua-agent

./: .env.example  .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
.playwright-mcp/: page-2026-05-09T15-05-46-361Z.yml  page-2026-05-09T15-06-04-521Z.yml  page-2026-05-09T15-06-49-872Z.yml  page-2026-05-09T15-07-20-915Z.yml  page-2026-05-09T15-07-45-535Z.yml  page-2026-05-09T15-08-06-196Z.yml  page-2026-05-09T15-08-47-749Z.yml  page-2026-05-09T15-09-10-561Z.yml  page-2026-05-09T15-09-33-161Z.yml  page-2026-05-09T15-09-41-585Z.yml  page-2026-05-09T15-10-00-242Z.yml  page-2026-05-09T15-10-19-672Z.yml  page-2026-05-09T15-10-59-819Z.yml  page-2026-05-09T15-11-20-198Z.yml
content/inbox/: en_to_de_kaffee.md  en_to_fa_university.md  en_to_it_coffee.md  en_to_nl_universiteit.md  en_to_ru_book.md  fa_to_en_doust.md  (+3 more)
docs/: agent-design.md  architecture.md  clients.md  content-schema.md  decisions.md  index.md  language-pair-design.md  mobile-https.md  playground.md  providers.md  references.md  roadmap.md  web-dev.md
examples/: README.md
tests/: conftest.py  test_anthropic_provider.py  test_api.py  test_claude_agent_sdk_provider.py  test_cli_smoke.py  test_exercise_schema.py  test_ingest_text.py  test_language_registry.py  test_lesson_schema.py  test_mock_pipeline.py  test_openai_compatible.py  test_sm2.py  test_tutor_tools.py
tools/: rename_errors.tsv  rename_log.tsv  rename_undo.sh  transcend_apply_renames.py  transcend_rename_plan.py  transcend_rename_plan.tsv
web/: index.html  package-lock.json  package.json  vite.config.ts
(+62 files in other folders)
