[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lingua-agent"
version = "0.1.0"
description = "Agentic AI language-learning platform — any language A → B, local-first, MIT licensed."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Arash Shahidi" }]
keywords = ["language-learning", "agent", "llm", "srs", "spaced-repetition", "persian", "farsi", "italian", "russian"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
]
dependencies = [
    "pydantic>=2.6",
    "typer>=0.12",
    "rich>=13.7",
    "PyYAML>=6.0",
    "python-frontmatter>=1.1",
    "httpx>=0.27",
]

[project.optional-dependencies]
openai = ["openai>=1.40"]
anthropic = ["anthropic>=0.34"]
api = ["fastapi>=0.110", "uvicorn>=0.29"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.5"]
docs = ["mkdocs-material>=9.5"]

[project.scripts]
lingua-agent = "lingua_agent.cli:app"

[project.urls]
Homepage = "https://github.com/arash-shahidi/lingua-agent"

[tool.hatch.build.targets.wheel]
packages = ["src/lingua_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
